# SDU-Control-Task-ROS

./: disassembly.py
belt_task/: CMakeLists.txt  package.xml
belt_task/action/: belt_task_action.action
belt_task/config/objects/: model_config.yaml
belt_task/config/robot_A/: data_log.csv  initialize_robot.yaml
belt_task/config/robot_B/: data_log.csv  initialize_robot.yaml
belt_task/config/wc/UR10e/: UR10e.xml
belt_task/config/wc/UR10e_2018/: PosRPYParam.xml  UR10e_a.xml  UR10e_b.xml
belt_task/include/: belt_task.h  data_logging.h  main.h  object_estimation.h  ros_node.h  task_motion.h  task_robot.h  task_strategy.h  tool_estimation.h
belt_task/src/: data_logging.cpp  main.cpp  object_estimation.cpp  ros_node.cpp  task_motion.cpp  task_robot.cpp  task_strategy.cpp  tool_estimation.cpp
